--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,22 +21,30 @@ jobs:
         
       - name: Test AWS Credentials
         run: |
-          aws sts get-caller-identity
-          aws ecr describe-repositories --region ${{ secrets.AWS_REGION }}
+          echo "Running AWS sts get-caller-identity"
+          aws sts get-caller-identity --debug
+          echo "Describing ECR repositories"
+          aws ecr describe-repositories --region ${{ secrets.AWS_REGION }} --debug
 
       - name: Login to Amazon ECR
         run: |
-          aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login \
-          --username AWS --password-stdin ${{ secrets.ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com
+          echo "Logging in to ECR"
+          aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin ${{ secrets.ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com || exit 1
 
       - name: Build Docker Images
         run: |
-          docker build -t webapp-image ./webapp
-          docker build -t mysql-image ./mysql
+          echo "Building webapp image"
+          docker build --log-level=debug -t webapp-image ./webapp
+          echo "Building mysql image"
+          docker build --log-level=debug -t mysql-image ./mysql
 
       - name: Tag and Push to Amazon ECR
         run: |
+          echo "Tagging webapp image"
           docker tag webapp-image:latest ${{ secrets.ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/webapp-image:latest
+          echo "Tagging mysql image"
           docker tag mysql-image:latest ${{ secrets.ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/mysql-image:latest
+          echo "Pushing webapp image to ECR"
           docker push ${{ secrets.ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/webapp-image:latest
+          echo "Pushing mysql image to ECR"
           docker push ${{ secrets.ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/mysql-image:latest
