--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,9 +34,9 @@ jobs:
       - name: Build Docker Images
         run: |
           echo "Building webapp image"
-          docker build -t webapp-image ./webapp
+          docker build -t webapp-image -f Dockerfile .
           echo "Building mysql image"
-          docker build -t mysql-image ./mysql
+          docker build -t mysql-image -f Dockerfile_mysql .
 
       - name: Tag and Push to Amazon ECR
         run: |
