--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,13 @@ jobs:
           echo "Describing ECR repositories"
           aws ecr describe-repositories --region ${{ secrets.AWS_REGION }} --debug
 
+      - name: Create ECR Repositories if not exist
+        run: |
+          echo "Checking if webapp-image repository exists"
+          aws ecr describe-repositories --repository-names webapp-image --region ${{ secrets.AWS_REGION }} || aws ecr create-repository --repository-name webapp-image --region ${{ secrets.AWS_REGION }}
+          echo "Checking if mysql-image repository exists"
+          aws ecr describe-repositories --repository-names mysql-image --region ${{ secrets.AWS_REGION }} || aws ecr create-repository --repository-name mysql-image --region ${{ secrets.AWS_REGION }}
+
       - name: Login to Amazon ECR
         run: |
           echo "Logging in to ECR"
