--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,63 +1,62 @@
 name: Build and Push to ECR
 
- Uncomment the following lines if you want to enable automatic triggering again
-  on:
-       push:
-              branches:
-                       - main
+# Uncomment the following lines if you want to enable automatic triggering again
+# on:
+#   push:
+#     branches:
+#       - main
 
-              on:
-                  workflow_dispatch:  # Enables manual trigger from GitHub Actions UI
+on:
+  workflow_dispatch:  # Enables manual trigger from GitHub Actions UI
 
-                  jobs:
-                      build-and-push:
-                            runs-on: ubuntu-latest
-                                steps:
-                                        - name: Checkout Code
-                                                uses: actions/checkout@v3
-                                                            
-                                                      - name: Setup AWS CLI
-                                                              uses: aws-actions/configure-aws-credentials@v2
-                                                                      with:
-                                                                                  aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-                                                                                            aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-                                                                                                      aws-region: ${{ secrets.AWS_REGION }}
-                                                                                                              
-                                                                                                            - name: Test AWS Credentials
-                                                                                                                    run: |
-                                                                                                                                echo "Running AWS sts get-caller-identity"
-                                                                                                                                          aws sts get-caller-identity 
-                                                                                                                                                    
-                                                                                                                                                - name: Login to Amazon ECR
-                                                                                                                                                        run: |
-                                                                                                                                                                    echo "Logging in to ECR"
-                                                                                                                                                                              aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin ${{ secrets.ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com || exit 1
+jobs:
+  build-and-push:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+            
+      - name: Setup AWS CLI
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+        
+      - name: Test AWS Credentials
+        run: |
+          echo "Running AWS sts get-caller-identity"
+          aws sts get-caller-identity 
+          
+      - name: Login to Amazon ECR
+        run: |
+          echo "Logging in to ECR"
+          aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin ${{ secrets.ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com || exit 1
 
-                                                                                                                                                                                    - name: Check if ECR Repositories Exist and Create If Needed
-                                                                                                                                                                                            run: |
-                                                                                                                                                                                                        echo "Checking if repositories exist"
-                                                                                                                                                                                                                  
-                                                                                                                                                                                                                  # Check for web app repo existence
-                                                                                                                                                                                                                  #           aws ecr describe-repositories --repository-names my-web-app-repo --region ${{ secrets.AWS_REGION }} || aws ecr create-repository --repository-name my-web-app-repo --region ${{ secrets.AWS_REGION }}
-                                                                                                                                                                                                                  #                     
-                                                                                                                                                                                                                  #                               # Check for MySQL repo existence
-                                                                                                                                                                                                                  #                                         aws ecr describe-repositories --repository-names mysql-repo --region ${{ secrets.AWS_REGION }} || aws ecr create-repository --repository-name mysql-repo --region ${{ secrets.AWS_REGION }}
-                                                                                                                                                                                                                  #                                                 
-                                                                                                                                                                                                                  #                                                       - name: Build Docker Images
-                                                                                                                                                                                                                  #                                                               run: |
-                                                                                                                                                                                                                  #                                                                         echo "Building webapp image"
-                                                                                                                                                                                                                  #                                                                                   docker build -t webapp-image -f Dockerfile .
-                                                                                                                                                                                                                  #                                                                                             echo "Building mysql image"
-                                                                                                                                                                                                                  #                                                                                                       docker build -t mysql-image -f Dockerfile_mysql .
-                                                                                                                                                                                                                  #
-                                                                                                                                                                                                                  #                                                                                                             - name: Tag and Push to Amazon ECR
-                                                                                                                                                                                                                  #                                                                                                                     run: |
-                                                                                                                                                                                                                  #                                                                                                                               echo "Tagging webapp image"
-                                                                                                                                                                                                                  #                                                                                                                                         docker tag webapp-image:latest ${{ secrets.ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/my-web-app-repo:latest
-                                                                                                                                                                                                                  #                                                                                                                                                   echo "Tagging mysql image"
-                                                                                                                                                                                                                  #                                                                                                                                                             docker tag mysql-image:latest ${{ secrets.ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/mysql-repo:latest
-                                                                                                                                                                                                                  #                                                                                                                                                                       echo "Pushing webapp image to ECR"
-                                                                                                                                                                                                                  #                                                                                                                                                                                 docker push ${{ secrets.ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/my-web-app-repo:latest
-                                                                                                                                                                                                                  #                                                                                                                                                                                           echo "Pushing mysql image to ECR"
-                                                                                                                                                                                                                  #                                                                                                                                                                                                     docker push ${{ secrets.ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/mysql-repo:latest
-                                                                                                                                                                                                                  #
+      - name: Check if ECR Repositories Exist and Create If Needed
+        run: |
+          echo "Checking if repositories exist"
+          
+          # Check for web app repo existence
+          aws ecr describe-repositories --repository-names my-web-app-repo --region ${{ secrets.AWS_REGION }} || aws ecr create-repository --repository-name my-web-app-repo --region ${{ secrets.AWS_REGION }}
+          
+          # Check for MySQL repo existence
+          aws ecr describe-repositories --repository-names mysql-repo --region ${{ secrets.AWS_REGION }} || aws ecr create-repository --repository-name mysql-repo --region ${{ secrets.AWS_REGION }}
+        
+      - name: Build Docker Images
+        run: |
+          echo "Building webapp image"
+          docker build -t webapp-image -f Dockerfile .
+          echo "Building mysql image"
+          docker build -t mysql-image -f Dockerfile_mysql .
+
+      - name: Tag and Push to Amazon ECR
+        run: |
+          echo "Tagging webapp image"
+          docker tag webapp-image:latest ${{ secrets.ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/my-web-app-repo:latest
+          echo "Tagging mysql image"
+          docker tag mysql-image:latest ${{ secrets.ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/mysql-repo:latest
+          echo "Pushing webapp image to ECR"
+          docker push ${{ secrets.ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/my-web-app-repo:latest
+          echo "Pushing mysql image to ECR"
+          docker push ${{ secrets.ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/mysql-repo:latest
